--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: A developers collection of thoughts and exploration on cloud comput
 
 # List of links in the navigation bar
 navbar-links:
-#  About Me: "aboutme"
+  About Me: "aboutme"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -56,7 +56,7 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Cottonglow
+  name: Sandra Hayward
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
